index row y cols

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <p class="p-3 shadow-sm rounded bg-purple-light mt-5 text-center ">El lema <strong style="color: blueviolet;">"Regala Vida, Vence al Cáncer"</strong> sugiere que al hacer donaciones, las personas están contribuyendo a brindar esperanza y mejorar la calidad de vida de quienes luchan contra él.</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-12 text-center">
+            <!-- <div class="col-12 text-center">
                 <img src="img/personas.jpg" class="shadow" width="200">
-            </div>
+            </div> -->
         </div>
        
     </div>
@@ -51,27 +51,27 @@
         <div class="row text-center">
             <p class="h1 text-center font-text fs-23 text-white"> <strong>Testimonios</strong></p>
 
-            <div class="col-12 col-md-6 mt-5">
-                <img src="img/mujer.jpg" class="w-75 rounded" alt="" srcset="">
+            <div class="col-lg-6 col-md-6 mt-5">
+                <img src="img/mujer.jpg" class="w-100 rounded" alt="" srcset="">
             </div>
 
-            <div class="col-12 col-md-6 mt-5 relative">
+            <div class="col-lg-6 col-md-6 mt-5 relative">
                 <p class="font-text text-center text-white fs-1 vh-center">Creo en mí y en este proyecto</p>
             </div>
 
-            <div class="col-12 col-md-6 mt-5">
-                <img src="img/mujer2.jpg" class="w-75 rounded" alt="" srcset="">
+            <div class="col-lg-6 col-md-6 mt-5">
+                <img src="img/mujer2.jpg" class="w-100 rounded" alt="" srcset="">
             </div>
 
-            <div class="col-12 col-md-6 relative mt-5">
+            <div class="col-lg-6 col-md-6 relative mt-5">
                 <p class="font-text text-center text-white fs-1 vh-center">Mi vida ha dado un giro de 180° Gracias a tí</p>
             </div>
 
-            <div class="col-12 col-md-6 mt-5">
-                <img src="img/persona1.jpg" class="w-75 rounded" alt="" srcset="">
+            <div class="col-lg-6 col-md-6 mt-5">
+                <img src="img/persona1.jpg" class="w-100 rounded" alt="" srcset="">
             </div>
 
-            <div class="col-12 col-md-6 mt-5 relative">
+            <div class="col-lg-6 col-md-6 mt-5 relative">
                 <p class="font-text text-center text-white fs-1 vh-center">Ahora lucho por mis sueños</p>
             </div>
 
