--- a/nosotros.html
+++ b/nosotros.html
@@ -13,24 +13,28 @@
 </head>
 <body>
     <!-- <div class="colores mt-5">a</div> -->
-    <h1 class="font-title mt-5" style="color:white; text-align: center; font-size: 58px;">Regala Vida</h1>
+    <div class="container">
+        <h1 class="font-title mt-5 logo-bg fw-bolder" style="text-align: center; font-size: 58px;">Regala Vida.</h1>
+        <p class="text-purple fs-small text-center m-0 p-0 mb-5">"Fundación Regala Vida, Vence al Cáncer"</p>
+
+    </div>
+    <!-- <img src="img/liston.png" width="100"> -->
 
 
-    <div class="container-fluid text-center mb-5">
+    <div class="container-fluid text-center mt-4 rounded-4 bg-white-soft ">
 
-        <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
-            <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
-            <a class="text-decoration-none act" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
-            <a class="text-decoration-none text-white hover" href="campanias.html"><li class="p-2">CAMPAÑAS</li></a>
-            <a class="text-decoration-none text-white hover" href="contacto.html"><li class="p-2">CONTACTO</li></a>
-        </ul>
-
-        
+        <!-- <ul class="menu text-purple justify-content-center  m-0 p-0 fs-menu font-text"> -->
+        <ul class="justify-content-center menu ff-amatic">
+            <a class="text-decoration-none hover" href="index.html"><li>INICIO</li></a>
+            <a class="text-decoration-none act tx-shadow" href="nosotros.html"><li>NOSOTROS</li></a>
+            <a class="text-decoration-none hover" href="campanias.html"><li>CAMPAÑAS</li></a>
+            <a class="text-decoration-none hover" href="contacto.html"><li>CONTACTO</li></a>
+        </ul>    
 
     </div>
 
-    <div class="container-fluid wd mt-5">
-        <p class="text-center mb-5 text-white fs-4">Regala Vida, es una asociación sin fines de lucro que recauda fondos para ayudar a personas con afecciones causadas por el Cáncer. Nuestra misión es lograr que las personas consigan una mejor calidad de vida a través del logro de sus sueños y objetivos.</p>
+    <div class="container-fluid mt-5">
+        <p class="text-center mb-5 text-purple fs-5"><strong class="text-pink">Regala Vida</strong> , es una iniciativa de recaudación de fondos diseñada para apoyar a personas afectadas por el cáncer y contribuir a la investigación y tratamientos relacionados con esta enfermedad..</p>
 
         <p class="text-center text-white mb-5 bg-purple-dark rounded p-2 shadow">Nuestros equipo de trabajo está conformado por estudiantes activos, con un gran espiritu de servicio, quienes ponen a disposición de la asociación todo su talento.</p>
 
@@ -52,7 +56,7 @@
 
     </div>
 
-    <div class="container-fluid wd mt-5">
+    <div class="container-fluid tx-shadow mt-5">
         <p class="text-center text-purple fs-5">Para nosotros siempre será un gran placer servirte, estamos comprometidos con la causa y deseamos que tú también lo estés. <br> <strong>¡Queremos seguir luchando y lucharemos!</strong></p>
     </div>
 
@@ -62,7 +66,7 @@
 
     <div class="bg-purple-dark">
         <div class="container-fluid mt-5 p-4">
-            <p class="font-text text-center text-white fs-1">
+            <p class="ff-amatic text-center text-white fs-1">
                 Contactanos al: 800 123 4567
             </p>
         </div>
