TITULARES DE LAS CAMPAÑAS

--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="container mt-2 wd-camp">
-        <p class="text-purple text-center ff-amatic fw-bold fs-48 mt-5">“CUREMOS SONRISAS”</p>
+        <p class="text-purple text-center ff-amatic fw-bold fs-48 mt-5">“SIGAMOS CUMPLIENDO METAS”</p>
         <p class="text-center fs-1 text-white tx-shadow">Meta $ 35,000.00 MXN </p>
         <div class="row">
 
