--- a/camp_mama.html
+++ b/camp_mama.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="container mt-2 wd-camp">
-        <p class="text-purple text-center ff-amatic fw-bold fs-48 mt-5">“CUREMOS SONRISAS”</p>
+        <p class="text-purple text-center ff-amatic fw-bold fs-48 mt-5">“BRILLA POR LA ESPERANZA”</p>
         <p class="text-center fs-1 text-white tx-shadow">Meta $ 25,000.00 MXN </p>
         <div class="row">
 
