--- a/contacto.html
+++ b/contacto.html
@@ -13,33 +13,36 @@
 </head>
 <body>
     <!-- <div class="colores mt-5">a</div> -->
-    <h1 class="font-title mt-5" style="color:white; text-align: center; font-size: 58px;">Regala Vida</h1>
+    <div class="container">
+        <h1 class="font-title mt-5 logo-bg fw-bolder" style="text-align: center; font-size: 58px;">Regala Vida.</h1>
+        <p class="text-purple fs-small text-center m-0 p-0 mb-5">"Fundación Regala Vida, Vence al Cáncer"</p>
 
+    </div>
+    <!-- <img src="img/liston.png" width="100"> -->
 
-    <div class="container-fluid text-center mb-5">
+    <div class="container-fluid text-center mt-4 rounded-4 bg-white-soft ">
 
-        <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
-            <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
-            <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
-            <a class="text-decoration-none text-white hover" href="campanias.html"><li class="p-2">CAMPAÑAS</li></a>
-            <a class="text-decoration-none act" href="contacto.html"><li class="p-2">CONTACTO</li></a>
-        </ul>
-
-        
+        <!-- <ul class="menu text-purple justify-content-center  m-0 p-0 fs-menu font-text"> -->
+        <ul class="justify-content-center menu ff-amatic">
+            <a class="text-decoration-none hover" href="index.html"><li>INICIO</li></a>
+            <a class="text-decoration-none hover" href="nosotros.html"><li>NOSOTROS</li></a>
+            <a class="text-decoration-none hover" href="campanias.html"><li>CAMPAÑAS</li></a>
+            <a class="text-decoration-none act tx-shadow" href="contacto.html"><li>CONTACTO</li></a>
+        </ul>    
 
     </div>
 
-    <div class="container-fluid wd mt-5">
-        <p class="text-center mb-5 text-white">Ponte en contacto a través de este formulario o a los teléfonos que aparecen al pie.</p>
+    <div class="container-fluid mt-5">
+        <p class="text-center mb-5 text-white tx-shadow fs-5">Ponte en contacto a través de este formulario o a los teléfonos que aparecen al pie de página.</p>
         <form action="" method="post">
-            <div class="m-2 bg-white p-3 rounded">
-                Nombre: <input type="text" class="m-1 w-100"><br>
-                Email: <input type="text"  class="m-1 w-100" ><br>
+            <div class="m-2 bg-white p-3 rounded-4">
+                Nombre: <input type="text" class="m-1 w-100 rounded-4"><br>
+                Email: <input type="text"  class="m-1 w-100 rounded-4" ><br>
             </div>
-            <div class="rounded bg-white p-2 border p-2 m-2">
-                <textarea class="border border-none border-white w-100" rows="10"></textarea><br>
+            <div class="rounded-4 bg-white p-2 p-2 m-2">
+                <textarea class="border rounded-4 border-dark  w-100" rows="10"></textarea><br>
             </div>
-            <input type="submit"class="btn btn-success btn-block m-2">
+            <input type="submit"class="btn btn-success btn-block w-100">
         </form>
         
 
