tamaño de fuentes index

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <p class="ff-amatic fs-38 text-pink tx-shadow-white">
             <strong>¡Gracias por llegar hasta aquí!</strong> 
         </p>
-        <p class="text-purple fs-20">Tu apoyo y tus contribuciones nos permitirán alcanzar nuestras metas y mejorar las condiciones. Tu generosa donación financiará nuestra misión.</p>
+        <p class="text-purple fs-20 tx-shadow">Tu apoyo y tus contribuciones nos permitirán alcanzar nuestras metas y mejorar las condiciones. Tu generosa donación financiará nuestra misión.</p>
   
         <div class="text-center">
             <img src="img/arrow.gif" class="w-25">
