--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -87,16 +87,19 @@
             </div>
     </div>
     
-
-   
-
-    <div class="bg-purple-dark">
-        <div class="container-fluid mt-5 p-4">
+    <div class="bg-purple-dark mt-4">
+        <div class="container-fluid">
             <p class="ff-amatic text-center text-white fs-1">
                 Contactanos al: 800 123 4567
             </p>
+            <div class="d-flex flex-row social">
+                <img src="img/facebook.png" width="40" class="p-2">
+                <img src="img/instagram.png" width="40" class="p-2">
+                <img src="img/tiktok.png" width="40" class="p-2">
+                <img src="img/twitter.png" width="40" class="p-2">
+            </div>
         </div>
-        <p class="text-center text-white p-0 m-0">COPYRIGHT © 2023 Regala Vida - Todos los derechos reservados.</p>
+        <p class="text-center text-white p-0 m-0 fs-17">COPYRIGHT © 2023 Regala Vida - Todos los derechos reservados.</p>
     </div>
 
 
