texto titular modificado

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="container align-items-center justify-content-center my-5">
     
-           <p class="text-pink fs-38 fw-bold tx-shadow-white ff-amatic text-center">"¡Estamos Aquí para Apoyarte en tu Lucha contra el Cáncer de Mama!"</p>
+           <p class="text-pink fs-38 fw-bold tx-shadow-white ff-amatic text-center">"¡Estamos Aquí para Apoyarte en tu Lucha contra el Cáncer!"</p>
            <!-- <hr class="text-white"> -->
            <p class="text-purple tx-shadow fs-20 text-center">
             "Bienvenida a nuestra comunidad en línea dedicada a brindar apoyo, información y recursos a personas valientes que enfrentan al cáncer."
