--- a/camp_mama.html
+++ b/camp_mama.html
@@ -40,8 +40,8 @@
         <p class="text-center fs-1 text-white tx-shadow">Meta $ 25,000.00 MXN </p>
         <div class="row">
 
-            <div class="col-12 col-lg-12">
-                <img class="rounded-4 shadow text-center" width="100%" height="300" src="img/campania3.jpg" />
+            <div class="col-12 col-lg-12 m-0 p-0">
+                <img class="rounded-4 shadow text-center" width="100%" src="img/campania3.jpg" />
                 
                 
             </div>
