--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
     <div class="container">
 
         <div class="container mt-5 text-center rounded">
-            <p class="ff-amatic fs-xl text-pink tx-shadow-white">
-                <strong>NUESTRA MISIÓN</strong> 
-            </p>
-            <p class="text-purple fs-sm tx-shadow">Nuestra misión es recaudar fondos para proporcionar acceso a tratamientos médicos de calidad, apoyo emocional, programas de prevención y concientización, así como recursos educativos para pacientes y sus familias. <br>
+           
 
-                Cada contribución a "Regala Vida, Vence el Cáncer" nos acerca un paso más a un mundo donde el cáncer ya no sea una sentencia de muerte, sino una enfermedad que se puede superar con valentía y determinación.</p>
+            <p class="ff-amatic fs-xl text-pink tx-shadow-white">
+                <strong>¡Tú apoyo puede cambiar vidas y hacer que el mundo sea un lugar mejor para todos!</strong> 
+            </p>
+            <p class="text-purple fs-sm tx-shadow">Únete a nosotros en esta noble causa y ayudemos a escribir historias de victoria sobre el cáncer, una donación a la vez.</p>
       
             <div class="text-center">
                 <img src="img/arrow.gif" class="w-25">
