--- a/nosotros.html
+++ b/nosotros.html
@@ -43,7 +43,7 @@
 
                 Cada contribución a "Regala Vida, Vence el Cáncer" nos acerca un paso más a un mundo donde el cáncer ya no sea una sentencia de muerte, sino una enfermedad que se puede superar con valentía y determinación.</p>
     
-            <p class="text-center text-white mb-5 fs-sm bg-purple-dark rounded-4 p-2 shadow mt-5">Nuestros equipo de trabajo está conformado por estudiantes activos, con un gran espiritu de servicio, quienes ponen a disposición de la asociación todo su talento.</p>
+            <p class="text-center text-white mb-5 fs-sm rounded-4 p-2 tx-shadow mt-5">Nuestros equipo de trabajo está conformado por estudiantes activos, con un gran espiritu de servicio, quienes ponen a disposición de la asociación todo su talento.</p>
     
             <div class="row pad">
 
