--- a/camp_infantil.html
+++ b/camp_infantil.html
@@ -50,7 +50,7 @@
                     </p>
     
                 </div>
-                <p class="text-center text-purple tx-shadow fs-sm">
+                <p class="text-center text-purple tx-shadow fs-1">
                     <strong>
                         ¡Gracias por tu generosidad y apoyo incondicional!
                     </strong>
