--- a/nosotros.html
+++ b/nosotros.html
@@ -34,12 +34,11 @@
     <div class="container">
 
         <div class="container mt-5">
-            <p class="text-center mb-5 text-purple fs-sm tx-shadow"><strong class="text-pink">Regala Vida</strong> , es una iniciativa de recaudación de fondos diseñada para apoyar a personas afectadas por el cáncer y contribuir a la investigación y tratamientos relacionados con esta enfermedad.</p>
-
+            
             <p class="ff-amatic fs-xl text-pink tx-shadow-white text-center">
                 <strong>NUESTRA MISIÓN</strong> 
             </p>
-            <p class="text-purple fs-sm tx-shadow text-center">Nuestra misión es recaudar fondos para proporcionar acceso a tratamientos médicos de calidad, apoyo emocional, programas de prevención y concientización, así como recursos educativos para pacientes y sus familias. <br>
+            <p class="text-purple fs-sm tx-shadow text-center">Nuestra misión es recaudar fondos para proporcionar acceso a tratamientos médicos de calidad, apoyo emocional, programas de prevención y concientización, así como recursos educativos para pacientes y sus familias. <br> <br>
 
                 Cada contribución a "Regala Vida, Vence el Cáncer" nos acerca un paso más a un mundo donde el cáncer ya no sea una sentencia de muerte, sino una enfermedad que se puede superar con valentía y determinación.</p>
     
