--- a/nosotros.html
+++ b/nosotros.html
@@ -12,7 +12,7 @@
     <title>Regala Vida</title>
 </head>
 <body>
-    <div class="colores mt-5">a</div>
+    <!-- <div class="colores mt-5">a</div> -->
     <div class="container">
 
         <div class="container">
