--- a/nosotros.html
+++ b/nosotros.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center mb-5 bg-white-normal rounded-4 mt-3">
-                    <div class="container m-0 p-0">
+                    <div class="container  p-0">
                         <p class="fs-name text-purple fw-bold tx-shadow mt-3">María Paula Díaz Meza </p>
                         <p class="text-purple text-center fw-bold fs-body">
                             <span class="text-pink">Estudiante de la Licenciatura en Administración</span> <br>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center mb-5 bg-white-normal rounded-4 mt-3">
-                    <div class="container m-0 p-0">
+                    <div class="container p-0">
                         <p class="fs-name text-purple fw-bold tx-shadow mt-3">Imelda Padilla Rojas</p>
                         <p class="text-purple text-center fw-bold fs-body">
                             <span class="text-pink">Estudiante de la Licenciatura en Administración</span> <br>
@@ -98,7 +98,7 @@ Soy  una persona que le gusta luchar por lo que quiere, soy consciente que cada 
                 </div>
 
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center mb-5 bg-white-normal rounded-4 mt-3">
-                    <div class="container m-0 p-0">
+                    <div class="container p-0">
                         <p class="fs-name text-purple fw-bold tx-shadow mt-3">Brisa Yocelin Hernández Sánchez</p>
                         <p class="text-purple text-center fw-bold fs-body">
                             <span class="text-pink">Estudiante de la Licenciatura en Administración</span> <br>
@@ -120,7 +120,7 @@ Soy una persona optimista y paciente, sé que las cosas llegan en un buen moment
                 </div>
 
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center mb-5 bg-white-normal rounded-4 mt-3">
-                    <div class="container m-0 p-0">
+                    <div class="container p-0">
                         <p class="fs-name text-purple fw-bold tx-shadow mt-3">Ernesto Ávila Hernández</p>
                         <p class="text-purple text-center fw-bold fs-body">
     
