--- a/nosotros.html
+++ b/nosotros.html
@@ -62,7 +62,7 @@
                             Soy una persona creativa con facilidad para memorizar información, cuento con un pensamiento estratégico y siempre estoy dispuesta al cambio, ya que me adapto fácilmente.
          
                         </p> 
-                        <p class="center text-purple">
+                        <p class="center text-purple fs-data">
                             <span>Vicente Fox #38, Colonia Obrera, Ameca, Jalisco</span> <br>
                             <span>Cel: 3318024525</span> <br>
                             <span>maria.diaz4462@alumnos.udg.mx</span> <br>
@@ -84,7 +84,7 @@
 Soy  una persona que le gusta luchar por lo que quiere, soy consciente que cada logro viene disfrazado de un gran esfuerzo y que si me lo propongo puedo alcanzar el éxito fácilmente y me gusta apoyar a los demás en lo que está a mi alcance.
 
                         </p> 
-                        <p class="center text-purple">
+                        <p class="center text-purple fs-data">
                             <span>05 de mayo #05, Colonia La Providencia, San Juanito de Escobedo</span><br>
                             <span>Cel: 3861042744</span> <br>
                             <span>imelda.padilla2819@alumnos.udg.mx </span> <br>
@@ -106,7 +106,7 @@ Soy una persona optimista y paciente, sé que las cosas llegan en un buen moment
 
 
                         </p> 
-                        <p class="center text-purple">
+                        <p class="center text-purple fs-data">
                             <span>C. Vallarta #12, Colonia Centro, Chiquilistlán, Jalisco</span><br>
                             <span>Cel: 3751380468</span> <br>
                             <span>brisa.hernandez6819@alumnos.udg.mx</span> <br>
@@ -129,7 +129,7 @@ Soy una persona optimista y paciente, sé que las cosas llegan en un buen moment
 Soy una persona colaboradora, que sabe trabajar y que da lo mejor de sí para llevar a su equipo a buen puerto. 
 
                         </p> 
-                        <p class="center text-purple">
+                        <p class="center text-purple fs-data">
                             <span>Josefa Ortiz de Domínguez #64, Colonia Centro, La Estanzuela, Teuchitlán, Jalisco</span><br>
                             <span>Cel: 3841179721</span> <br>
                             <span>ernesto.avila7560@alumnos.udg.mx</span> <br>
