--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -60,9 +60,9 @@
                 <div class="text-center mt-2">
                     
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
-                        <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
+                        <input type="hidden" name="hosted_button_id" value="HA3C67NUHQ3RW" />
                         <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
-                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
+                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
                         </form>
                         
                 </div>
