--- a/campanias.html
+++ b/campanias.html
@@ -61,10 +61,10 @@
 
                     <p class="text-center m-0 py-2">Campaña contra el cáncer de Mama</p>
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
-                        <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
+                        <input type="hidden" name="hosted_button_id" value="4RMA9WXPT7NVS" />
                         <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
-                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
-                    </form>
+                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
+                        </form>
                     <a href="camp_mama.html" class="text-decoration-none text-purple">
                         <p class="text-center m-0 p-1 bg-white rounded-4 tx-hover">Ver más información</p>
                     </a>
@@ -79,10 +79,10 @@
 
                     <p class="text-center m-0 py-2">Campaña contra el cáncer de Próstata</p>
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
-                        <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
+                        <input type="hidden" name="hosted_button_id" value="HA3C67NUHQ3RW" />
                         <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
-                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
-                    </form>
+                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
+                        </form>
                     <a href="camp_adulto.html" class="text-decoration-none text-purple">
                         <p class="text-center m-0 p-1 bg-white rounded-4 tx-hover">Ver más información</p>
                     </a>
