--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
             <div class="row">
     
                 <div class="col-lg-5 bg-white-normal rounded-4 my-1 p-3">
-                    <p class="text-purple text-justify fs-xs">
-                        <strong class="text-pink"><span class="text-center">¿Qué es el Cáncer?</span>  <br> </strong> "Entender el cáncer es el primer paso en tu viaje. Aquí te proporcionamos información clara y precisa sobre esta enfermedad."
+                    <p class="text-pink text-center fw-bold fs-xs m-0 p-0">¿Qué es el Cáncer?</p> 
+                    <p class="text-purple text-center fs-xs">
+                        "Entender el cáncer es el primer paso en tu viaje. Aquí te proporcionamos información clara y precisa sobre esta enfermedad."
                     </p>
                 </div>
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 bg-white-normal rounded-4 my-1 p-3">
-                    <p class="text-purple text-justify fs-xs">
-                        <strong class="text-pink">Detección Temprana <br> </strong> "La detección temprana salva vidas. Aprende sobre la importancia de las exploraciones corporales y la metodología."
+                    <p class="text-pink text-center fw-bold fs-xs m-0 p-0">Detección Temprana</p> 
+                    <p class="text-purple text-center fs-xs">
+                         "La detección temprana salva vidas. Aprende sobre la importancia de las exploraciones corporales y la metodología."
                     </p>
                 </div>
     
